@@ -4,6 +4,7 @@
 	* spvw_memfile.d (savemem_with_runtime): set mem_start if it was -1
 	(savemem): append mem_start to the image
 	(loadmem_from_handle): assume that the image end with mem_start
+	use ABORT_SYS, ABORT_INI, ABORT_MEM instead of abort[123]
 	(find_memdump): try to find mem_start at the end of the image first;
 	use the time-consuming (~1sec) find_marker() as a last resort
 
